--- a/DARLING.css
+++ b/DARLING.css
@@ -19,3 +19,7 @@ blockquote{
     padding-left: 1%;
     background-color: #36373c40;
 }
+
+.zero-shadow{
+    box-shadow: 10px 10px 5px #888888;
+}
