--- a/DARLING.css
+++ b/DARLING.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /**
 * Design By 狱杰1Jnver
 * Link: https://yujienb.cn/
@@ -22,4 +23,29 @@ blockquote{
 
 .zero-shadow{
     box-shadow: 10px 10px 5px #888888;
+}
+
+.zero-button{
+    color: #fff;
+    background-color: #0d6efd;
+    border-color: #0d6efd;
+}
+.btn{
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    border-radius: .25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
